--- a/admin/config.json
+++ b/admin/config.json
@@ -1,7 +1,7 @@
 {
     "installer": {
         "username": "admin",
-        "password": "teste12"
+        "password": "9915sg6"
     },
     "settings": {
         "name": "devShort shortlink service",
